crates/inertia-embed/tests/ui/fail/absolute_emitted_path.stderr
error: emitted path `/absolute/app.js` must be relative
 --> tests/ui/fail/absolute_emitted_path.rs:4:13
  |
4 |       let _ = embed_frontend! {
  |  _____________^
5 | |         root: "../../../../crates/inertia-embed/tests/fixtures/valid/dist",
6 | |         manifest: "../../../../crates/inertia-embed/tests/fixtures/valid/dist/.vite/absolute.json",
7 | |         entry: "src/main.ts",
8 | |     };
  | |_____^
  |
  = note: this error originates in the macro `embed_frontend` (in Nightly builds, run with -Z macro-backtrace for more info)
